--- a/04_Nested_table.html
+++ b/04_Nested_table.html
@@ -6,14 +6,12 @@
     <title>04_Nested_Table</title>
     <style>
         .main{
-            width:;
-            font-size: 40px;
-            padding-top: 80px;
-            padding-left: 250px;
+            font-size: 40px;  
         }
         table,td,th{
             padding: 10px;
             border:3px solid black;
+            margin: 50px auto;
         }
         .table2{
           padding: 0;
