--- a/06_RegistratonForm.html
+++ b/06_RegistratonForm.html
@@ -82,7 +82,7 @@
                     </td>
                     <td>
                         <label for="Email">Email</label><br>
-                        <input type="email" id="Email" placeholder="Enter Your Email">
+                        <input type="email" id="Email" placeholder="Enter Your Email" required>
                     </td>
                 </tr>
                 <tr>
