--- a/01_pract.html
+++ b/01_pract.html
@@ -29,14 +29,23 @@
             width: 100%;
             height: 450px;
         }
-        .contact1{
-            
-        }
         #img1{
             width: 100%;
             height: 250px;
             object-fit: cover;
-            filter: hue-rotate(140deg);
+        }
+        .contact1{
+          position: relative;
+        }
+        .contact1 .gradient::before{
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(to right,red,blue);
+          opacity: 0.5;
         }
         .contact{
             background-color: rgb(255, 116, 139);
@@ -112,6 +121,7 @@
         <h4>Contact-us-page</h4>
       </div>
       <div class="contact1">
+        <div class="gradient"></div>
         <img id="img1" src="https://img.freepik.com/free-photo/side-view-cropped-unrecognizable-business-people-working-common-desk_1098-20474.jpg?size=626&ext=jpg&ga=GA1.1.2116175301.1719014400&semt=ais_user" alt="img">
         <h1 id="Contact-us"> Contact-us</h1>
       </div>
