--- a/02_employee_reg.html
+++ b/02_employee_reg.html
@@ -40,6 +40,7 @@
       }
       .button{
         margin-left: 460px;
+        margin-bottom: 40px;
       }
       .button input{
         border-radius: 10px;
