--- a/05_Table2.html
+++ b/05_Table2.html
@@ -10,8 +10,9 @@
             width: 100%;
         }
         table{
-            margin-top: 60px;
-            margin-left: 300px;
+            /* margin-top: 60px; */
+            /* margin-left: 300px; */
+            margin:30px auto;
             text-align: left;
             background-color: rgb(199, 252, 234);
         }
@@ -28,7 +29,7 @@
 </head>
 <body>
     <div class="main">
-        <table border="1" rules="all">
+        <table rules="all">
             <thead>
                 <tr>
                     <th colspan="3">Invoice #9876543210</th>
